# video-streaming-engine

./: CMakeLists.txt  README.md  build_tests.sh  test_client.cpp  test_server.cpp
include/: Client.h  DecoderH264.h  EncoderH264.h  Network.h  Screen.h  Server.h
src/: Client.cpp  DecoderH264.cpp  EncoderH264.cpp  Network.cpp  Screen.cpp  Server.cpp
